<resources>
    <string name="app_name">BCCannCo Admin</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="staff_login">Staff Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="notification_channel_id">Cart_Admin</string>
    <string name="notification_channel_name">Cart_Admin_Noti_Channel</string>
    <string name="notification_content">New chat message from your customer</string>

    <string name="sales_Dashbord">Sales Dashboard</string>
    <string name="View_Orders">View Orders</string>
    <string name="menu_Inventory">Inventory</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_chats">Chats</string>
    <string name="menu_newsletter">Newsletter</string>
    <string name="menu_order_detail">Order Details</string>
    <string name="Order_Notes">Order Notes</string>
    <string name="qty">Qty:</string>
    <string name="qty_bold"><b>Qty:</b></string>
    <string name="option_bold"><b>Option:</b></string>
    <string name="select_category">Select Category</string>
    <string name="select_product">Select Product</string>
    <string name="product_image">Product image</string>
    <string name="new_quantity">New Quantity</string>
    <string name="Save">Save</string>
    <string name="Primary_Staff">Primary Staff:</string>
    <string name="Customer_Name">Customer Name</string>

    <string name="newslatter_hint">This will send an email to all customers who subscribe to the newsletter. It will contain a link for customers to unsubscribe</string>
    <string name="write_message">Write message</string>
    <string name="Subject_Line">Subject Line</string>
    <string name="Email_Body">Email Body</string>
    <string name="Send_Now">Send Now</string>
    <string name="Messaging">Messaging</string>
    <string name="select_batch">Select Batch</string>

    <array name="array_status">
        <item>All Orders</item>
        <item>Pending</item>
        <item>EMT</item>
        <item>To Fill</item>
        <item>Filling</item>
        <item>To Ship</item>
        <item>Shipped</item>
        <item>Complete</item>
        <item>Canceled</item>
    </array>

    <array name="array_status_detail">
        <item>Pending</item>
        <item>EMT</item>
        <item>To Fill</item>
        <item>Filling</item>
        <item>To Ship</item>
        <item>Shipped</item>
        <item>Complete</item>
        <item>Canceled</item>
    </array>

    <array name="array_order_filter">
        <item>Larger than</item>
        <item>Lower than</item>
    </array>
</resources>