<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/sales_Dashbord" />

        <item
            android:id="@+id/nav_order"
            android:title="@string/View_Orders" />

        <item
            android:id="@+id/nav_Inventory"
            android:title="@string/menu_Inventory" />

        <item
            android:id="@+id/nav_Chats"
            android:title="@string/menu_chats" />

        <item
            android:id="@+id/nav_Newsletter"
            android:title="@string/menu_newsletter" />
        <!--        <item-->
        <!--            android:id="@+id/nav_logout"-->
        <!--            android:title="@string/menu_logout" />-->
    </group>
</menu>