<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="@dimen/_20sdp"
    android:paddingEnd="@dimen/_20sdp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Login.LoginActivity">

    <ImageView
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:src="@drawable/ic_login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/welcome_back"
        android:textSize="@dimen/_16sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/staff_login"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/round_box_background"
        android:orientation="horizontal">
    <EditText
        android:id="@+id/Et_Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:background="@android:color/transparent"
        android:paddingStart="@dimen/_5sdp"
        android:paddingTop="@dimen/_15sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:paddingBottom="@dimen/_15sdp"
        android:text="api-test"
        android:textSize="@dimen/_14sdp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/round_box_background"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/Et_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="@dimen/_5sdp"
            android:paddingTop="@dimen/_15sdp"
            android:paddingEnd="@dimen/_40sdp"
            android:paddingBottom="@dimen/_15sdp"
            android:text="SNg4tSOF44GapAGnIiIJVcK4ph"
            android:textSize="@dimen/_14sdp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_10sdp">

            <ImageView
                android:id="@+id/Iv_pass_visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="2dp"
                android:onClick="PasswordVisibile"
                android:src="@drawable/ic_pass_visibility" />

            <ImageView
                android:id="@+id/Iv_pass_visible_off"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentRight="true"
                android:onClick="Passwordvisibility_off"
                android:src="@drawable/ic_pass_visibility_off"
                android:visibility="gone" />
        </RelativeLayout>
    </RelativeLayout>


    <TextView
        android:layout_width="@dimen/_80sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/fill_round_corner_button"
        android:gravity="center"
        android:onClick="OnLoginClickListner"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp" />

</LinearLayout>