<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inventory.InventoryFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/custom_loader" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_10sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_batch"
                        android:textSize="@dimen/_12sdp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:background="@drawable/round_box_background">

                        <Spinner
                            android:id="@+id/Sp_Category"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:spinnerMode="dropdown" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_product"
                        android:textSize="@dimen/_12sdp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:background="@drawable/round_box_background">

                        <Spinner
                            android:id="@+id/Sp_Product"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:spinnerMode="dropdown" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_gravity="center">

                        <ImageView
                            android:id="@+id/Iv_Productimage"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            android:scaleType="centerCrop" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:gravity="center"
                            android:text="@string/product_image"
                            android:visibility="gone" />

                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="center"
                        android:text="@string/qty"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_14sdp" />

                    <!--            <RelativeLayout-->
                    <!--                android:layout_width="match_parent"-->
                    <!--                android:layout_height="wrap_content"-->
                    <!--                android:layout_marginTop="@dimen/_10sdp"-->
                    <!--                android:layout_marginBottom="@dimen/_20sdp"-->
                    <!--                android:background="@drawable/round_box_background">-->

                    <EditText
                        android:id="@+id/Et_Qty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:background="@drawable/round_box_background"
                        android:hint="@string/new_quantity"
                        android:maxLines="1"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:spinnerMode="dropdown" />
                    <!--            </RelativeLayout>-->

                    <TextView
                        android:id="@+id/Tv_Save"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_40sdp"
                        android:background="@drawable/fill_round_corner_button"
                        android:gravity="center"
                        android:paddingTop="@dimen/_8sdp"
                        android:paddingBottom="@dimen/_8sdp"
                        android:text="@string/Save"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp" />

                </LinearLayout>


            </LinearLayout>

        </ScrollView>

    </RelativeLayout>
</FrameLayout>