<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newsletter.NewsletterFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp">

                <TextView
                    android:id="@+id/Tv_NewalattersHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/newslatter_hint"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/Subject_Line"
                    android:textSize="@dimen/_12sdp" />

                <EditText
                    android:id="@+id/Et_SubjectLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/round_box_background"
                    android:maxLines="2"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Email_Body"
                    android:textSize="@dimen/_12sdp" />

                <EditText
                    android:id="@+id/Et_MessageBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/round_box_background"
                    android:maxLines="7"
                    android:minLines="5"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/Tv_SendNoew"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:background="@drawable/fill_round_corner_button"
                    android:gravity="center"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:text="@string/Send_Now"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>
        </ScrollView>

        <include layout="@layout/custom_loader" />
    </RelativeLayout>
</FrameLayout>